# waveling

./: README.md  design.md  language.md
crates/const/: Cargo.toml
crates/const/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: compilation_error.rs  constant.rs  data_type.rs  diagnostics.rs  edge.rs  lib.rs  materialized_inputs.rs  node.rs  op.rs  program.rs  source_loc.rs  state.rs  vector_descriptor.rs
crates/core/src/passes/: insert_start_final_edges.rs  mod.rs  type_inference.rs  unify_vectors.rs
crates/core/src/typing/: mod.rs  unify_vectors.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/dsp_ir/: Cargo.toml
crates/dsp_ir/src/: constant.rs  inst_builder.rs  instruction.rs  lib.rs  types.rs
crates/dsp_ir/src/context/: constant_ref.rs  inst_ref.rs  mod.rs  state_ref.rs  value_ref.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: bundle.rs  lib.rs  shape.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  ops.rs
crates/parser/: Cargo.toml
crates/parser/examples/: print_ast_testbed.rs
crates/parser/src/: ast.rs  error.rs  external_parser.rs  grammar.pest  grammar.rs  lib.rs  parser.rs
crates/test_bench/: Cargo.toml
crates/test_bench/src/: compare_float_arrays.rs  lib.rs  program_runner.rs
crates/test_bench/src/ir/: mod.rs  simple_math.rs  state.rs  trigonometry.rs
crates/waveling_core/: Cargo.toml
