[package]
name = "waveling_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
mlua = { version = "0.8.3", features = ["lua54", "vendored"] }
petgraph = "0.6.2"
