[package]
name = "waveling_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
derive_more = "0.99.17"
indenter = { version = "0.3.3", features = ["std"] }
mlua = { version = "0.8.3", features = ["lua54", "vendored"] }
petgraph = "0.6.2"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"

[features]
