[package]
name = "waveling_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
derive_more = "0.99.17"
indenter = { version = "0.3.3", features = ["std"] }
itertools = "0.10.5"
mlua = { version = "0.8.3", features = ["lua54", "vendored"] }
petgraph = "0.6.2"
smallvec = { version = "1.10.0", features = ["const_generics", "union", "const_new", "write"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"

[features]
