[package]
name = "waveling_dsp_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
generational-arena = "0.2.8"
rust_decimal = "1.25.0"
smallvec = { version = "1.8.0", features = ["const_generics"] }
thiserror = "1.0.31"
